@@ -744,3 +744,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20090902 plusd.c: return error from libspectrum_plusd_read_data (Fred).
 20090912 szx.c: libspectrum was reading and writing AF and AF' in the wrong
          order in SZX files (fixes bug #2857419; thanks, velesoft) (Fred).
+20091022 wav.c: we expect mono sound files, tell audiofile to make the required
+         adjustments (fixes bug #2883135; thanks, Gilberto Almeida) (Fred).
